[gd_scene load_steps=7 format=3 uid="uid://cejp7in6euedf"]

[ext_resource type="Script" path="res://scripts/add_monster_panel.gd" id="1_7plxy"]
[ext_resource type="FontFile" uid="uid://cf0ukg763o0wd" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="1_eq2lb"]
[ext_resource type="Script" path="res://scripts/combat_panel.gd" id="1_sd6cn"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesome.gd" id="2_bfgwa"]
[ext_resource type="Texture2D" uid="uid://l3sgwykad38j" path="res://assets/icon_GUI_dropdown.svg" id="3_aict6"]
[ext_resource type="PackedScene" uid="uid://bqn88wm6ok4hu" path="res://scenes/monster_container.tscn" id="4_ujv5v"]

[node name="combat_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sd6cn")

[node name="AddPlayerDialog" type="ConfirmationDialog" parent="."]
title = "Add Player"
initial_position = 2
size = Vector2i(616, 400)
min_size = Vector2i(600, 400)
max_size = Vector2i(1920, 1080)
ok_button_text = "Accept"
dialog_hide_on_ok = false

[node name="HFlowContainer" type="HFlowContainer" parent="AddPlayerDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 608.0
offset_bottom = 351.0

[node name="NameEdit" type="LineEdit" parent="AddPlayerDialog/HFlowContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
placeholder_text = "Player Name"

[node name="InitiativeLabel" type="Label" parent="AddPlayerDialog/HFlowContainer"]
layout_mode = 2
text = "Initiative: "

[node name="InitiativeBox" type="SpinBox" parent="AddPlayerDialog/HFlowContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="AddPlayerDialog/HFlowContainer"]
layout_mode = 2
text = "Max HP: "

[node name="HPBox" type="SpinBox" parent="AddPlayerDialog/HFlowContainer"]
layout_mode = 2

[node name="ArmorEdit" type="LineEdit" parent="AddPlayerDialog/HFlowContainer"]
custom_minimum_size = Vector2(295, 0)
layout_mode = 2
placeholder_text = "Armor Class"

[node name="MovementEdit" type="LineEdit" parent="AddPlayerDialog/HFlowContainer"]
custom_minimum_size = Vector2(295, 0)
layout_mode = 2
placeholder_text = "Movement"

[node name="AddMonsterWindow" type="Window" parent="."]
initial_position = 1
size = Vector2i(1260, 660)
visible = false
min_size = Vector2i(1260, 660)
script = ExtResource("1_7plxy")

[node name="VBoxContainer" type="VBoxContainer" parent="AddMonsterWindow"]
custom_minimum_size = Vector2(1200, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="SearchFlowContainer" type="HFlowContainer" parent="AddMonsterWindow/VBoxContainer"]
layout_mode = 2

[node name="SearchContainer" type="PanelContainer" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer"]
custom_minimum_size = Vector2(395, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer/SearchContainer"]
layout_mode = 2

[node name="SearchEdit" type="LineEdit" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer/SearchContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
flat = true

[node name="Label" type="Label" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer/SearchContainer/HBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("1_eq2lb")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_bfgwa")
icon_name = "magnifying-glass"

[node name="SizeMenuButton" type="MenuButton" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer"]
custom_minimum_size = Vector2(395, 0)
layout_mode = 2
text = "Size"
icon = ExtResource("3_aict6")
flat = false
alignment = 0
icon_alignment = 2

[node name="TypeMenuButton" type="MenuButton" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer"]
custom_minimum_size = Vector2(395, 0)
layout_mode = 2
text = "Type"
icon = ExtResource("3_aict6")
flat = false
alignment = 0
icon_alignment = 2

[node name="CRMenuButton" type="MenuButton" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer"]
custom_minimum_size = Vector2(395, 0)
layout_mode = 2
text = "CR"
icon = ExtResource("3_aict6")
flat = false
alignment = 0
icon_alignment = 2

[node name="AlignmentMenuButton" type="MenuButton" parent="AddMonsterWindow/VBoxContainer/SearchFlowContainer"]
custom_minimum_size = Vector2(795, 0)
layout_mode = 2
text = "Alignment"
icon = ExtResource("3_aict6")
flat = false
alignment = 0
icon_alignment = 2

[node name="MonsterListHolder" type="VBoxContainer" parent="AddMonsterWindow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MonsterContainer" parent="AddMonsterWindow/VBoxContainer/MonsterListHolder" instance=ExtResource("4_ujv5v")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="AddMonsterWindow/VBoxContainer/MonsterListHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="MonsterListContainer" type="VBoxContainer" parent="AddMonsterWindow/VBoxContainer/MonsterListHolder/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[align=center][b][size=6]Combat[/size][/b][/align]
[align=center][b]Reminders[/b][/align][list][*]A [b]round[/b] [i]not a turn[/i] lasts 6 seconds.
[*][b]Surprise[/b] generally means comparing Wisdom (Perception) against Dexterity (Stealth). If a combatant is aware of a threat, they [i]cannot[/i] be surprised. One combatant can be surprised while others on their side are not.
[*]On your turn you can perform [b]one action[/b], [b]one bonus action[/b] (if granted by an ability), [b]one object interaction[/b], and before the start of your next turn [b]one reaction[/b]. Unless an ability explicitly allows you to perform multiple of these, you must select [i]no more than one[/i] of each action type no matter how many options you have.
[*]Combatants can only pass through another’s space if (a) the one occupying that space lets them, (b) there are at least two levels of size difference between them. Another creature’s space counts as difficult terrain, and you cannot end your turn in another’s space willingly.
[*][b]Opportunity Attacks[/b] are a [i]reaction[/i] provoked when one creature [i]leaves[/i] another’s space.
[*]Working on a [b]grid[/b] means each square represents 5 ft. Diagonal movement costs 1.5 movement (done as one square costs 5 and the second costs 10, alternating) and cannot cross walls or corners.[/list][align=center][b]Common Actions[/b][/align][list][*][b]Attack[/b]. When attacking: a target is picked, then you add your ability modifiers (Strength for Melee, Dexterity for Ranged, unless otherwise stated) and  your proficiency bonus if applicable to the attack roll. If it meets or exceeds the target’s armor class, the attack hits. Rolling a 1 is an automatic miss and rolling a 20 is an automatic hit regardless of modifiers.
On a hit, you roll the attack dice (from the weapon or power) and add the relevant modifiers (Strength for Melee, Dexterity for Ranged, Powers [i]may[/i] describe a modifier to add).
If the attack was a [b]Critical Hit[/b] (Rolling a 20 or the critical hit range of the weapon) then you roll the attack dice twice [i]then[/i] add your modifiers (modifiers don’t get applied twice).
After calculating the damage factor in [b]resistances[/b] (deals double damage), [b]vulnerabilities[/b] (deals half damage), or [b]immunities[/b] (negates damage) based on the damage type.
[b]Ranged Attacks[/b] have an effective range/max range system. If the distance exceeds the effective range you attack with disadvantage, if it exceeds the max range you cannot attack that target. Ranged attacks have disadvantage on non-incapacitated creatures within 5 ft.
[b]Double Weapon[/b] if a weapon has the [i]light[/i] and [i]double[/i] properties and you are two-handing it and you have just taken the attack action, then you can perform another attack as a [i]bonus action[/i]. You [b]do not[/b] add your ability modifiers, but you [b]do[/b] add your proficiency bonus to the [i]attack roll[/i]. You [b]do[/b] add your ability modifiers to the [i]damage roll[/i].
[*][b]Casting Powers[/b]. Some powers have a casting time of action, which can be performed according to that power’s specific rule.
[*][b]Dash[/b]. Dashing increases your movement this turn by your speed plus any modifiers.
[*][b]Disengage[/b]. Prevents provoking opportunity attacks for the rest of your turn.
[*][b]Dodge[/b]. Until the start of your next turn, attack rolls against you have disadvantage if you can see the attacker. You make Dexterity saving throws with advantage.
[*][b]Guard[/b]. Defend a creature within 5 ft. Any attack roll against the guarded has disadvantage if you can see the attacker and the guarded is within 5 ft. If the attack would hit, you can chose to let it hit you instead, and you take max damage instead of rolling.
[*][b]Help[/b]. The helped creature gains advantage on the next ability check on the task you are helping with. This includes attack rolls.
[*][b]Hide[/b]. Make a Dexterity (Stealth) check to hide.
[*][b]Ready[/b]. Define a trigger and the action you will take in response to that trigger. You store that as a [i]reaction[/i]. If you ready a power, you cast it (consuming Force/Tech points). Readied powers require concentration, so any other concentration power ends and you might break concentration if hit before using the power.
[*][b]Search[/b]. Make a (GM’s choice) Wisdom (Perception) or Intelligence (Investigation) check to find something.
[*][b]Use An Object[/b]. This can either be a second [i]object interaction[/i], or the use of an item that requires an action (i.e. Grenades or Medpacs).[/list]"

[node name="CombatentStack" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CombatentStack"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CombatentStack/VBoxContainer"]
layout_mode = 2

[node name="NewPlayerButton" type="Button" parent="HBoxContainer/CombatentStack/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "New Player"

[node name="NewMonsterButton" type="Button" parent="HBoxContainer/CombatentStack/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "New Monster"

[node name="ClearButton" type="Button" parent="HBoxContainer/CombatentStack/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/CombatentStack/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InitiativeStack" type="VBoxContainer" parent="HBoxContainer/CombatentStack/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[connection signal="confirmed" from="AddPlayerDialog" to="." method="_on_add_player_dialog_confirmed"]
[connection signal="close_requested" from="AddMonsterWindow" to="." method="_on_add_monster_window_close_requested"]
[connection signal="pressed" from="HBoxContainer/CombatentStack/VBoxContainer/HBoxContainer/NewPlayerButton" to="." method="_on_new_player_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CombatentStack/VBoxContainer/HBoxContainer/NewMonsterButton" to="." method="_on_new_monster_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CombatentStack/VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
